...
            onLista: () => Navigator.of(
              context,
            ).push(MaterialPageRoute(builder: (_) => const ListaAlunos())),
          ),
          _ItemGestao(
            icone: Icons.build_circle,
            titulo: 'Manutenções',
            onCadastro: () => Navigator.of(
              context,
            ).push(MaterialPageRoute(builder: (_) => const FormManutencao())),
            onLista: () => Navigator.of(
              context,
            ).push(MaterialPageRoute(builder: (_) => const ListaManutencoes())),
...
