...
    final filas = turma.sala.numeroFilas;
    final colunas = turma.sala.numeroColunas;

    return Scaffold(
      appBar: AppBar(
        title: const TituloAppBarSpinFlow(
          contexto: 'Mapa Operacional (Professora)',
        ),
        actions: [
          IconButton(
            onPressed: _selecionarData,
            icon: const Icon(Icons.calendar_month),
          ),
...
