...
          const AcaoSairAppBar(),
        ],
        bottom: TabBar(
          controller: _tabController,
          tabs: [
            ConfiguracaoAbas.texto('Aulas'),
            ConfiguracaoAbas.texto('Repertorio'),
            ConfiguracaoAbas.texto('Administrativo'),
          ],
        ),
      ),
      body: TabBarView(
        controller: _tabController,
        children: const [
...
