...
        const PopupMenuItem<_AcaoUsuario>(
          value: _AcaoUsuario.sair,
          child: Row(
            children: [
              Icon(Icons.logout, size: 18),
              SizedBox(width: 10),
              Text('Sair'),
            ],
          ),
        ),
      ],
      child: Padding(
        padding: const EdgeInsets.only(right: 10),
...
